--- a/第一版页面/orderDetail.html
+++ b/第一版页面/orderDetail.html
@@ -18,7 +18,7 @@
     .orderDetail > div h3 {
        border-bottom: 1px solid #dfdfdf; 
        padding: 36px 0px 20px;
-       margin: 0px;
+       margin: 0px 0 20px;
     }
     .orderDetail > div p, .orderDetail > div .list {
         color: #ababab;
